--- a/index.html
+++ b/index.html
@@ -395,7 +395,20 @@
         <!-- tour-section end -->
 
 
-        
+        <!-- deals-section -->
+        <section class="deals-section" style="background-image: url(assets/images/resource/IP/IP人物.png);">
+            <div class="auto-container">
+                <div class="content_block_2">
+                    <div class="content-box">
+                        <h3>Group Travel <br />to New Zealand</h3>
+                        <div class="price"><h4>$150</h4><del>$300</del></div>
+                        <p>Lorem ipsum dolor amet consectetur adipiscing sed do eiusmod tempor ux incidunt labore dolore magna aliqua Quis ipsum suspen.</p>
+                        <a href="tour-details.html" class="theme-btn">See Details</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- deals-section end -->
 
 
         <!-- place-section -->
@@ -471,6 +484,8 @@
             </div>
         </section>
         <!-- place-section end -->
+
+        
 
 
         <!-- map-section -->
