--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                                 </figure>
                                 <figure class="image image-2"><img src="assets/images/resource/卡萨湖/picture-2.png" alt=""></figure>
                                 <div class="video-content">
-                                    <h3>Find Your Best Destination</h3>
+                                    <h3>找到<br/>适合你的景点</h3>
                                     <div class="video-btn">
                                         <a href="assets/images/resource/卡萨湖/vido-1.mp4" class="lightbox-image" data-caption=""><i class="icon-Video"></i></a>
                                     </div>
@@ -400,10 +400,9 @@
             <div class="auto-container">
                 <div class="content_block_2">
                     <div class="content-box">
-                        <h3>Group Travel <br />to New Zealand</h3>
-                        <div class="price"><h4>$150</h4><del>$300</del></div>
-                        <p>Lorem ipsum dolor amet consectetur adipiscing sed do eiusmod tempor ux incidunt labore dolore magna aliqua Quis ipsum suspen.</p>
-                        <a href="tour-details.html" class="theme-btn">See Details</a>
+                        <h3>IP形象—洛泱</h3>
+                        <p>在服饰上，以唐朝襦裙打底，外配元朝短衫；在饰品上，同样以唐卡头饰为参考设计——红、绿宝石搭配金丝，斜挎茶马古道为主题的挎包；人物上，以Q版为主，让人物更加生动形象，整体色调采用唐卡配色，鲜艳而又不违和，以人可爱又亲近的感觉。</p>
+                        <a href="tour-details.html" class="theme-btn">了解更多</a>
                     </div>
                 </div>
             </div>
