--- a/index.html
+++ b/index.html
@@ -338,6 +338,106 @@
             <div class="pattern-layer" style="background-image: url(assets/images/shape/shape-4.png);"></div>
             <div class="auto-container">
                 <div class="sec-title text-center">
+                    <p>Modern & Beautiful</p>
+                    <h2>Our Most Popular Adventures</h2>
+                </div>
+                <div class="row clearfix">
+                    <div class="col-lg-4 col-md-6 col-sm-12 tour-block">
+                        <div class="tour-block-one wow fadeInUp animated animated" data-wow-delay="00ms" data-wow-duration="1500ms">
+                            <div class="inner-box">
+                                <figure class="image-box">
+                                    <img src="assets/images/特产/炉霍县牦牛肉干-1.png" alt="">
+                                    <a href="tour-details.html"><i class="fas fa-link"></i></a>
+                                </figure>
+                                <div class="lower-content">
+                                    <div class="rating"><span><i class="fas fa-star"></i>8.0 Superb</span></div>
+                                    <p>炉霍县牦牛肉干系列选用青藏高原纯净、无污染的鲜牦牛肉作原料，辅以天然上等香料，按照传统工艺精工细作而成，具有野香浓郁，色鲜味美，化渣可口的特点。</p>
+                                    <div class="btn-box">
+                                        <a href="tour-details.html">了解更多</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 tour-block">
+                        <div class="tour-block-one wow fadeInUp animated animated" data-wow-delay="300ms" data-wow-duration="1500ms">
+                            <div class="inner-box">
+                                <figure class="image-box">
+                                    <img src="assets/images/特产/川乌.png" alt="">
+                                    <a href="tour-details.html"><i class="fas fa-link"></i></a>
+                                </figure>
+                                <div class="lower-content">
+                                    <div class="rating"><span><i class="fas fa-star"></i>8.0 Superb</span></div>
+                                    <p>川乌为常用川产道地中药材，草本植物乌头，干燥主根。又称川草乌、乌头等。性热， 味辛、苦，有大毒，具有祛风、除湿、散寒等功效。</p>
+                                    <div class="btn-box">
+                                        <a href="tour-details.html">了解更多</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 tour-block">
+                        <div class="tour-block-one wow fadeInUp animated animated" data-wow-delay="600ms" data-wow-duration="1500ms">
+                            <div class="inner-box">
+                                <figure class="image-box">
+                                    <img src="assets/images/特产/雪域俄色茶.png" alt="">
+                                    <a href="tour-details.html"><i class="fas fa-link"></i></a>
+                                </figure>
+                                <div class="lower-content">
+                                    <div class="rating"><span><i class="fas fa-star"></i>8.0 Superb</span></div>
+                                    <p>“雪域俄色茶”系俄色树属.于在无任何污染环境中生长的野生树，为雪域高原地区独特的稀有树种。在霍尔章谷地区，许多树龄已达百年甚至数百年。长期以来，俄色“霍尔古藏茶”在藏区仅作为接待贵宾、节庆活动和专供土司、-以及贵族阶层的奢侈饮品，它的神奇药用功效被录入了最具权威的藏医学著作《四部医典》。</p>
+                                    <div class="btn-box">
+                                        <a href="tour-details.html">了解更多</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 tour-block">
+                        <div class="tour-block-one wow fadeInUp animated animated" data-wow-delay="600ms" data-wow-duration="1500ms">
+                            <div class="inner-box">
+                                <figure class="image-box">
+                                    <img src="assets/images/特产/玉米馍.png" alt="">
+                                    <a href="tour-details.html"><i class="fas fa-link"></i></a>
+                                </figure>
+                                <div class="lower-content">
+                                    <div class="rating"><span><i class="fas fa-star"></i>8.0 Superb</span></div>
+                                    <p> 茯苓为生长在松树根部的寄生真菌，四川较早栽培的药用菌。又称松茯苓、茯灵。属担子菌纲多孔目多孔菌科卧孔菌属。含茯苓聚糖和三萜类化合物茯苓酸等多种 成分，有利尿、健脾、安神等作用。是传统中药材，也可配制成糕点，是老年人 和幼儿的滋补健脾食品。</p>
+                                    <div class="btn-box">
+                                        <a href="tour-details.html">了解更多</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 tour-block">
+                        <div class="tour-block-one wow fadeInUp animated animated" data-wow-delay="600ms" data-wow-duration="1500ms">
+                            <div class="inner-box">
+                                <figure class="image-box">
+                                    <img src="assets/images/特产/茯苓.png" alt="">
+                                    <a href="tour-details.html"><i class="fas fa-link"></i></a>
+                                </figure>
+                                <div class="lower-content">
+                                    <div class="rating"><span><i class="fas fa-star"></i>8.0 Superb</span></div>
+                                    <p>炉霍县牦牛肉干系列选用青藏高原纯净、无污染的鲜牦牛肉作原料，辅以天然上等香料，按照传统工艺精工细作而成，具有野香浓郁，色鲜味美，化渣可口的特点。</p>
+                                    <div class="btn-box">
+                                        <a href="tour-details.html">了解更多</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- tour-section end -->
+
+
+        <!-- tour-section -->
+        <section class="tour-section bg-color-1 sec-pad">
+            <div class="pattern-layer" style="background-image: url(assets/images/shape/shape-4.png);"></div>
+            <div class="auto-container">
+                <div class="sec-title text-center">
                     <h2>炉霍小筑</h2>
                 </div>
                 <div class="row clearfix">
